--- a/index.html
+++ b/index.html
@@ -3,31 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta name="title" content="SAMAA_" />
+    <meta name="description" content="SAMAA_" />
+    <meta name="keywords" content="SAMAA_" />
 
     <meta property="og:locale" content="ja_JP" />
     <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:url" content="" />
+    <meta property="og:site_name" content="SAMAA_" />
+    <meta property="og:title" content="SAMAA_" />
+    <meta property="og:description" content="SAMAA_" />
+    <meta property="og:image" content="https://samaa.studio1014.jp/ogimage.png" />
+    <meta property="og:url" content="https://samaa.studio1014.jp/" />
 
-    <link rel="canonical" href="" />
+    <link rel="canonical" href="https://samaa.studio1014.jp/" />
     <link rel="icon" href="/favicon.ico" />
 
-    <!-- @adobe fonts -->
-    <link rel="stylesheet" href="https://use.typekit.net/lzo7mzq.css" />
-
     <!-- @google fonts -->
+    <link rel="preconnect" href="https://use.typekit.net" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500&family=Noto+Sans+JP:wght@400;500&family=Overpass+Mono:wght@500&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500&&family=Overpass+Mono:wght@500&display=swap"
+      onload="
+        this.onload = null
+        this.rel = 'stylesheet'
+      "
     />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500&&family=Overpass+Mono:wght@500&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
+
+    <!-- @adobe fonts -->
+    <link
+      rel="preload"
+      as="style"
+      href="https://use.typekit.net/lzo7mzq.css"
+      onload="
+        this.onload = null
+        this.rel = 'stylesheet'
+      "
+    />
+    <noscript>
+      <link rel="stylesheet" href="https://use.typekit.net/lzo7mzq.css" />
+    </noscript>
 
     <title>SAMAA_</title>
   </head>
