--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="SAMAA_" />
-    <meta name="description" content="SAMAA_" />
-    <meta name="keywords" content="SAMAA_" />
+    <meta name="description" content="MAKE A_NEW WORLD" />
 
     <meta property="og:locale" content="ja_JP" />
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="website" />
     <meta property="og:site_name" content="SAMAA_" />
     <meta property="og:title" content="SAMAA_" />
-    <meta property="og:description" content="SAMAA_" />
-    <meta property="og:image" content="https://samaa.studio1014.jp/ogimage.png" />
-    <meta property="og:url" content="https://samaa.studio1014.jp/" />
+    <meta property="og:description" content="MAKE A_NEW WORLD" />
+    <meta property="og:image" content="https://samaa.world/samaa_ogimage.jpg" />
+    <meta property="og:url" content="https://samaa.world/" />
 
-    <link rel="canonical" href="https://samaa.studio1014.jp/" />
+    <link rel="canonical" href="https://samaa.world/" />
     <link rel="icon" href="/favicon.ico" />
 
     <!-- @google fonts -->
